force-app/main/default/objects/GPMS_Account_History__c/GPMS_Account_History__c.object-meta.xml
<CustomObject>
    <label>Account History</label>
    <nameField>
        <displayFormat>ACH-{00000}</displayFormat>
        <label>Account History</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>