force-app/main/default/objects/GPMS_Account_History__c/fields/ABN_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>ABN_Effective_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>ABN Ineffective Date</label>
    <type>Date</type>
</CustomField>