force-app/main/default/objects/GPMS_Account_History__c/fields/ABN_Name__c.field-meta.xml
<CustomField>
    <fullName>ABN_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ABN Name</label>
    <referenceTo>Registered_ABN_Name__c</referenceTo>
    <relationshipLabel>Account History</relationshipLabel>
    <relationshipName>Account_History</relationshipName>
    <type>Lookup</type>
</CustomField>