force-app/main/default/objects/GPMS_Account_History__c/fields/Incorporation_Status__c.field-meta.xml
<CustomField>
    <fullName>Incorporation_Status__c</fullName>
    <label>Incorporation Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>