force-app/main/default/objects/GPMS_Account_History__c/fields/Incorporation_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Incorporation_Status_Date__c</fullName>
    <label>Incorporation Status Date</label>
    <type>Date</type>
</CustomField>