force-app/main/default/objects/GPMS_Account_History__c/fields/LegacyCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>LegacyCreatedDate__c</fullName>
    <label>Legacy Created Date</label>
    <type>DateTime</type>
</CustomField>