force-app/main/default/objects/GPMS_Account_History__c/fields/Organisation_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Purpose__c</fullName>
    <label>Organisation Purpose</label>
    <length>255</length>
    <type>Text</type>
</CustomField>