force-app/main/default/objects/GPMS_Account_History__c/fields/Organisation_Type__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Type__c</fullName>
    <label>Organisation Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>