force-app/main/default/objects/GPMS_Account_History__c/fields/Organisation_Type_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Type_Effective_Date__c</fullName>
    <label>Organisation Type Effective Date</label>
    <type>Date</type>
</CustomField>