force-app/main/default/objects/GPMS_Account_History__c/fields/Provider_Status_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Provider_Status_Effective_Date__c</fullName>
    <label>Provider Status Effective Date</label>
    <type>Date</type>
</CustomField>