force-app/main/default/objects/GPMS_Account_History__c/recordTypes/ABN_History.recordType-meta.xml
<RecordType>
    <fullName>ABN_History</fullName>
    <active>true</active>
    <description>History of ABN Information</description>
    <label>ABN History</label>
</RecordType>