force-app/main/default/objects/GPMS_Account_History__c/recordTypes/Incorporation_Status_History.recordType-meta.xml
<RecordType>
    <fullName>Incorporation_Status_History</fullName>
    <active>true</active>
    <description>History of Incorporation Status</description>
    <label>Incorporation Status History</label>
</RecordType>