force-app/main/default/objects/GPMS_Account_History__c/recordTypes/Organisation_Details_History.recordType-meta.xml
<RecordType>
    <fullName>Organisation_Details_History</fullName>
    <active>true</active>
    <description>History of Organisation Details</description>
    <label>Organisation Details History</label>
</RecordType>